--- a/Main/src/MainMenu.form
+++ b/Main/src/MainMenu.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Main">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MainMenu">
   <grid id="27dc6" binding="main" layout-manager="CardLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -29,7 +29,7 @@
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="Main Menu"/>
+                  <text value="MainMenu Menu"/>
                 </properties>
               </component>
               <component id="71943" class="javax.swing.JButton" binding="playButton" default-binding="true">
